--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,14 +8,16 @@
         placeholder="Type new todo"
         autofocus
         type="text"
+        #tareaInput
+        (keyup.enter)="addTarea($event)"
       />
     </div>
   </header>
   <div class="container todoapp-wrapper">
     <!-- This section should be hidden by default and shown when there are todos -->
-    <section class="main">
+    <section class="main" *ngIf="tareas.length>0">
       <ul class="todo-list">
-        <li class="completed">
+        <!-- <li class="completed">
           <div class="view">
             <input class="toggle" type="checkbox" checked />
             <label>Learn JavaScript</label>
@@ -38,11 +40,19 @@
             <button class="destroy"></button>
           </div>
           <input class="edit" value="Make dishes" />
+        </li> -->
+        <li *ngFor="let tarea of tareas" #elementoTarea (dblclick)="modeEdition(elementoTarea)">
+          <div class="view">
+            <input  class="toggle" type="checkbox" [(ngModel)]="tarea.completed"  (change)="completedOrPending(tarea)"/>
+            <label>{{tarea.title}}</label>
+            <button class="destroy"></button>
+          </div>
+          <input class="edit" value={{tarea.title}} />
         </li>
       </ul>
     </section>
     <!-- This footer should be hidden by default and shown when there are todos -->
-    <footer class="footer">
+    <footer class="footer" *ngIf="tareas.length>0">
       <!-- This should be `0 items left` by default -->
       <span class="todo-count"><strong>0</strong> item left</span>
       <!-- Remove this if you don't implement routing -->
