--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,14 +8,14 @@
         placeholder="Type new todo"
         autofocus
         type="text"
-        #tareaInput
-        (keyup.enter)="addTarea($event)"
+        [(ngModel)]="taskTitle"
+        (keydown.enter)="addNewTask()"
       />
     </div>
   </header>
   <div class="container todoapp-wrapper">
     <!-- This section should be hidden by default and shown when there are todos -->
-    <section class="main" *ngIf="tareas.length>0">
+    <section class="main" *ngIf="tasks.length>0">
       <ul class="todo-list">
         <!-- <li class="completed">
           <div class="view">
@@ -41,20 +41,19 @@
           </div>
           <input class="edit" value="Make dishes" />
         </li> -->
-        <li *ngFor="let tarea of tareas" #elementoTarea (dblclick)="modeEdition(elementoTarea)">
-          <div class="view">
-            <input  class="toggle" type="checkbox" [(ngModel)]="tarea.completed"  (change)="completedOrPending(tarea)"/>
-            <label>{{tarea.title}}</label>
-            <button class="destroy"></button>
-          </div>
-          <input class="edit" value={{tarea.title}} />
-        </li>
+        <ng-container *ngFor="let task of tasks; index as i">
+          <app-task
+            [task]="task"
+            [index]="i">
+          </app-task>
+        </ng-container>
+       
       </ul>
     </section>
     <!-- This footer should be hidden by default and shown when there are todos -->
-    <footer class="footer" *ngIf="tareas.length>0">
+    <footer class="footer" *ngIf="tasks.length>0">
       <!-- This should be `0 items left` by default -->
-      <span class="todo-count"><strong>0</strong> item left</span>
+      <span class="todo-count"><strong>{{getPending()}}</strong> item<span *ngIf="getPending() !==1">s</span> left</span>
       <!-- Remove this if you don't implement routing -->
       <ul class="filters">
         <li>
@@ -68,7 +67,7 @@
         </li>
       </ul>
       <!-- Hidden if no completed items are left ↓ -->
-      <button class="clear-completed">Clear completed</button>
+      <button  *ngIf="getCompleted() > 0" class="clear-completed"  (click)="eraseCompleted()">Clear completed</button>
     </footer>
   </div>
 </section>
